changed local links into links for gh-pages | main-page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/precet.css">
-    <link rel="stylesheet" href="pages/main/main.css">
-    <link rel="stylesheet" href="pages/main/main.js">
+    <link rel="stylesheet" href="../../assets/precet.css">
+    <link rel="stylesheet" href="../../pages/main/main.css">
+    <link rel="stylesheet" href="../../pages/main/main.js">
     <title>Shelter</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div class="header__wraper">
                     <div>
                         <a href="index.html">
-                            <h1><img src="/assets/icons/logo.svg" alt="logo-main-page"></h1>
+                            <h1><img src="../../assets/icons/logo.svg" alt="logo-main-page"></h1>
                         </a>
                     </div>
                     <nav>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div>
-                        <img class="puppy__main" src="/assets/images/start-screen-puppy.png" alt="puppy">
+                        <img class="puppy__main" src="../../assets/images/start-screen-puppy.png" alt="puppy">
                     </div>
                 </div>
             </div> 
@@ -77,7 +77,7 @@
             <div class="wrapper">
                 <div class="section__start-about">
                     <div class="about__picture">
-                        <img src="/assets/images/about-pets.png" alt="about__picture" class="about__picture-about">
+                        <img src="../../assets/images/about-pets.png" alt="about__picture" class="about__picture-about">
                     </div>
                     <div class="about__text-content">
                         <div class="about__title">
@@ -111,7 +111,7 @@
                         <div class="our__pets-card">
                             <div class="card__set">
                                 <div>
-                                    <img class="pic__card" src="/assets/images/katrine.png" alt="Katrine">
+                                    <img class="pic__card" src="../../assets/images/katrine.png" alt="Katrine">
                                 </div>
                                 <div class="title__card">
                                     <a class="button_text">Katrine</a>
@@ -128,7 +128,7 @@
                         <div class="our__pets-card last__pet-card-prev">
                             <div class="card__set">
                                 <div>
-                                    <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                                    <img class="pic__card" src="../../assets/images/jennifer.png" alt="Jennifer">
                                 </div>
                                 <div class="title__card">
                                     <a class="button_text">Jennifer</a>
@@ -145,7 +145,7 @@
                         <div class="our__pets-card last__pet-card">
                             <div class="card__set">
                                 <div>
-                                    <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
+                                    <img class="pic__card" src="../../assets/images/woody.png" alt="Woody">
                                 </div>
                                 <div class="title__card">
                                     <a class="button_text">Woody</a>
@@ -184,39 +184,39 @@
                     </div>
                     <div class="help__us-grid">
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-pet-food.svg" alt="Pet food" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-pet-food.svg" alt="Pet food" class="list__help-us-pic">
                             <h4>Pet food</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-transportation.svg" alt="Transportation" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-transportation.svg" alt="Transportation" class="list__help-us-pic">
                             <h4>Transportation</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-toys.svg" alt="Toys" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-toys.svg" alt="Toys" class="list__help-us-pic">
                             <h4>Toys</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-bowls-and-cups.svg" alt="Bowls and cups" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="Bowls and cups" class="list__help-us-pic">
                             <h4>Bowls and cups</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-shampoos.svg" alt="Shampoos" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-shampoos.svg" alt="Shampoos" class="list__help-us-pic">
                             <h4>Shampoos</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-vitamins.svg" alt="Vitamins" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-vitamins.svg" alt="Vitamins" class="list__help-us-pic">
                             <h4>Vitamins</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-medicines.svg" alt="Medicines" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-medicines.svg" alt="Medicines" class="list__help-us-pic">
                             <h4>Medicines</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-collars-leashes.svg" alt="Collars / leashes" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-collars-leashes.svg" alt="Collars / leashes" class="list__help-us-pic">
                             <h4>Collars / leashes</h4>
                         </div>
                         <div class="help__us-grid-item">
-                            <img src="/assets/icons/icon-sleeping-area.svg" alt="Sleeping areas" class="list__help-us-pic">
+                            <img src="../../assets/icons/icon-sleeping-area.svg" alt="Sleeping areas" class="list__help-us-pic">
                             <h4>Sleeping areas</h4>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
             <div class="wrapper">
                 <section class="donation__starting">
                     <div class="donation__pic">
-                        <img src="/assets/images/donation-dog.png" alt="donation-dog" class="donation__pic-set">
+                        <img src="../../assets/images/donation-dog.png" alt="donation-dog" class="donation__pic-set">
                     </div>
                     <div class="donation__text-content">
                         <div class="donation__heading">
@@ -241,7 +241,7 @@
                         <div class="credit__card-donation">
                             <a href="#">
                                 <button class="pink_button-credit">
-                                    <a class="button_text"><img class="button-pic_donation" src="/assets/icons/credit-card.svg" alt="credit-card">3380 2880 8791 7435</a>
+                                    <a class="button_text"><img class="button-pic_donation" src="../../assets/icons/credit-card.svg" alt="credit-card">3380 2880 8791 7435</a>
                                 </button>
                             </a>
                         </div>
@@ -260,23 +260,23 @@
                     <div class="footter_questions">
                         <h3 class="footer__questions-title">For questions <br> and suggestions</h3>
                         <div class="footer__sub-menu">
-                            <a href= "mailto:email@shelter.com" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-email.svg" alt="email-footer">email@shelter.com</a>
+                            <a href= "mailto:email@shelter.com" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-email.svg" alt="email-footer">email@shelter.com</a>
                         </div>
                         <div class="footer__sub-menu">
-                            <a href= "tel:+136745677554" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-phone.svg" alt="phone-footer">+13 674 567 75 54</a>
+                            <a href= "tel:+136745677554" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-phone.svg" alt="phone-footer">+13 674 567 75 54</a>
                         </div>
                     </div>
                     <div class="footer__visit">
                         <h3 class="footer__questions-title">We are waiting <br> for your visit</h3>
                         <div class="footer__sub-menu">
-                            <a  href="https://www.google.com/maps/search/?api=1&query=1 Central Street, Boston" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-one-footer">1 Central Street, Boston</a>
+                            <a  href="https://www.google.com/maps/search/?api=1&query=1 Central Street, Boston" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-marker.svg" alt="marker-one-footer">1 Central Street, Boston</a>
                         </div>
                         <div class="footer__sub-menu">
-                            <a href="https://www.google.com/maps/search/?api=1&query=18 South Park, London" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-two-footer">18 South Park, London</a>
+                            <a href="https://www.google.com/maps/search/?api=1&query=18 South Park, London" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-marker.svg" alt="marker-two-footer">18 South Park, London</a>
                         </div>
                     </div>
                     <div class="footer__pic">
-                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
+                        <img src="../../assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
                     </div>
                 </div>
             </div>
