changed local links into links for gh-pages | our-pets page

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/precet.css">
-    <link rel="stylesheet" href="/pages/pets/pets.css">
-    <link rel="stylesheet" href="/pages/pets/pets.js">
+    <link rel="stylesheet" href="../../assets/precet.css">
+    <link rel="stylesheet" href="../../pages/pets/pets.css">
+    <link rel="stylesheet" href="../../pages/pets/pets.js">
     <title>Our pets</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div class="header__wraper">
                     <div>
                         <a href="index.html">
-                            <h1><img src="/assets/icons/logo-black.svg" alt="logo-main-page"></h1>
+                            <h1><img src="../../assets/icons/logo-black.svg" alt="logo-main-page"></h1>
                         </a>
                     </div>
                     <nav>
@@ -58,7 +58,7 @@
                     <div class="our__pets-card">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/katrine.png" alt="Katrine">
+                                <img class="pic__card" src="../../assets/images/katrine.png" alt="Katrine">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Katrine</a>
@@ -75,7 +75,7 @@
                     <div class="our__pets-card">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/charly.png" alt="charly">
+                                <img class="pic__card" src="../../assets/images/charly.png" alt="charly">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Сharly</a>
@@ -92,7 +92,7 @@
                     <div class="our__pets-card">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/freddie.png" alt="Freddie">
+                                <img class="pic__card" src="../../assets/images/freddie.png" alt="Freddie">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Freddie</a>
@@ -109,7 +109,7 @@
                     <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                                <img class="pic__card" src="../../assets/images/jennifer.png" alt="Jennifer">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Jennifer</a>
@@ -126,7 +126,7 @@
                     <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/scarlett.png" alt="Scarlett">
+                                <img class="pic__card" src="../../assets/images/scarlett.png" alt="Scarlett">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Scarlett</a>
@@ -143,7 +143,7 @@
                     <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/sophia.png" alt="Sophia">
+                                <img class="pic__card" src="../../assets/images/sophia.png" alt="Sophia">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Sophia</a>
@@ -160,7 +160,7 @@
                     <div class="our__pets-card pet__card-inactive pet__card-inactive-320">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                                <img class="pic__card" src="../../assets/images/jennifer.png" alt="Jennifer">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Jennifer</a>
@@ -177,7 +177,7 @@
                     <div class="our__pets-card pet__card-inactive pet__card-inactive-320">
                         <div class="card__set">
                             <div>
-                                <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
+                                <img class="pic__card" src="../../assets/images/woody.png" alt="Woody">
                             </div>
                             <div class="title__card">
                                 <a class="button_text">Woody</a>
@@ -209,23 +209,23 @@
                     <div class="footter_questions">
                         <h3 class="footer__questions-title">For questions <br> and suggestions</h3>
                         <div class="footer__sub-menu">
-                            <a href= "mailto:email@shelter.com" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-email.svg" alt="email-footer">email@shelter.com</a>
+                            <a href= "mailto:email@shelter.com" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-email.svg" alt="email-footer">email@shelter.com</a>
                         </div>
                         <div class="footer__sub-menu">
-                            <a href= "tel:+136745677554" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-phone.svg" alt="phone-footer">+13 674 567 75 54</a>
+                            <a href= "tel:+136745677554" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-phone.svg" alt="phone-footer">+13 674 567 75 54</a>
                         </div>
                     </div>
                     <div class="footer__visit">
                         <h3 class="footer__questions-title">We are waiting <br> for your visit</h3>
                         <div class="footer__sub-menu">
-                            <a  href="https://www.google.com/maps/search/?api=1&query=1 Central Street, Boston" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-one-footer">1 Central Street, Boston</a>
+                            <a  href="https://www.google.com/maps/search/?api=1&query=1 Central Street, Boston" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-marker.svg" alt="marker-one-footer">1 Central Street, Boston</a>
                         </div>
                         <div class="footer__sub-menu">
-                            <a href="https://www.google.com/maps/search/?api=1&query=18 South Park, London" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-two-footer">18 South Park, London</a>
+                            <a href="https://www.google.com/maps/search/?api=1&query=18 South Park, London" class="sub__menu-footer-text"><img class="footer-icon" src="../../assets/icons/icon-marker.svg" alt="marker-two-footer">18 South Park, London</a>
                         </div>
                     </div>
                     <div class="footer__pic">
-                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
+                        <img src="../../assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
                     </div>
                 </div>
             </div>
