added burger menu | main and our-pets pages

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/precet.css">
     <link rel="stylesheet" href="../../pages/main/main.css">
-    <link rel="stylesheet" href="../../pages/main/main.js">
     <title>Shelter</title>
 </head>
 <body>
@@ -23,12 +22,12 @@
                     <nav>
                         <ul class="header__list">
                             <li class="list__item">
-                                <a href="/pages/main/index.html" class="header__link-active">
+                                <a href="../../pages/main/index.html" class="header__link-active">
                                     About the shelter
                                 </a>
                             </li>
                             <li class="list__item">
-                                <a href="/pages/pets/pets.html" class="header__link">
+                                <a href="../../pages/pets/pets.html" class="header__link">
                                     Our pets
                                 </a>
                             </li>
@@ -43,6 +42,11 @@
                                 </a>
                             </li>
                         </ul>
+                        <div class="hambueger__menu">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -167,7 +171,7 @@
                     </div>
                     <div class="our__pets-ending">
                         <button class="pink_button">
-                            <a class="button_text" onclick="window.location.href = '/pages/pets/pets.html';">Get to know the rest</a>
+                            <a class="button_text" onclick="window.location.href = '../../pages/pets/pets.html';">Get to know the rest</a>
                         </button>
                     </div>
                 </div>
@@ -283,5 +287,6 @@
         </footer>
         <! Section footer ends>
     </main>
+    <script src="../../pages/main/main.js"></script>
 </body>
 </html>
