--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -23,17 +23,17 @@
                     <nav>
                         <ul class="header__list ">
                             <li class="list__item">
-                                <a href="/pages/main/index.html" class="header__link">
+                                <a href="../../pages/main/index.html" class="header__link">
                                     About the shelter
                                 </a>
                             </li>
                             <li class="list__item">
-                                <a href="/pages/pets/pets.html" class="header__link-active">
+                                <a href="../../pages/pets/pets.html" class="header__link-active">
                                     Our pets
                                 </a>
                             </li>
                             <li class="list__item">
-                                <a href="/pages/main/index.html#help" class="header__link">
+                                <a href="../../pages/main/index.html#help" class="header__link">
                                     Help the shelter
                                 </a>
                             </li>
@@ -43,6 +43,11 @@
                                 </a>
                             </li>
                         </ul>
+                        <div class="hambueger__menu">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -232,5 +237,6 @@
         </footer>
         <! Section footer ends>
     </main>
+    <script src="../../pages/main/main.js"></script>
 </body>
 </html>
